srcs/tester/base/vector/resize/log.txt
./base/vector/resize/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector;
 ^
./base/vector/resize/patched.cpp:10:28: error: use of undeclared identifier 'myvector'
 for (size_t i=1;i<10;i++) myvector.push_back(i);
                           ^
./base/vector/resize/patched.cpp:12:2: error: use of undeclared identifier 'myvector'
 myvector.resize(5);
 ^
./base/vector/resize/patched.cpp:13:2: error: use of undeclared identifier 'myvector'
 myvector.resize(8,100);
 ^
./base/vector/resize/patched.cpp:14:2: error: use of undeclared identifier 'myvector'
 myvector.resize(12);
 ^
./base/vector/resize/patched.cpp:17:20: error: use of undeclared identifier 'myvector'
 for (size_t i=0;i<myvector.size();i++)
                   ^
./base/vector/resize/patched.cpp:18:22: error: use of undeclared identifier 'myvector'
 std::cout << ' ' << myvector[i];
                     ^
7 errors generated.
